add json ignore and refactor code